--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         </div>
 
         <div id="informations" class="">
-
+            <div class="error-localisation"></div>
         </div>
     </div>
 
@@ -45,17 +45,55 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    io = io.connect();
+    //Todo: Mettre ça dans un fichier externe
 
-    // Emit ready event.
-    io.emit('ready');
-    console.time('ready');
+    var socket = io.connect('http://localhost:3000');
+    socket.on('ready', function () {
+        // Envoi au Master son identification
+        socket.emit('client');
 
-    // Listen for the talk event.
-    io.on('ready', function (data) {
-        console.timeEnd('ready');
-        console.info(data.message);
+        // Test
+        socket.emit('play', {timeStart: 0, path: 'test', name: 'test.avi'});
     });
+
+    // Check
+    socket.on('check', function () {
+        console.log('Check');
+        socket.emit('check-client');
+    });
+</script>
+
+<script>
+    //Todo: Mettre ça dans un fichier externe
+
+    /* Localisation */
+    var errorLocalisation = document.getElementById("error-localisation");
+
+    function getLocation() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function (position) {
+                socket.emit('position', position.coords)
+            }, showError);
+        } else {
+            x.innerHTML = "Geolocation is not supported by this browser.";
+        }
+    }
+    function showError(error) {
+        switch (error.code) {
+            case error.PERMISSION_DENIED:
+                x.innerHTML = "User denied the request for Geolocation."
+                break;
+            case error.POSITION_UNAVAILABLE:
+                x.innerHTML = "Location information is unavailable."
+                break;
+            case error.TIMEOUT:
+                x.innerHTML = "The request to get user location timed out."
+                break;
+            case error.UNKNOWN_ERROR:
+                x.innerHTML = "An unknown error occurred."
+                break;
+        }
+    }
 </script>
 </body>
 </html>
