--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -11,14 +11,21 @@
 </head>
 <body id="<%= id %>" class="movie-details">
 
-<div id="content">
-    <h2></h2>
-    <span id="year"></span>
-    <span id="rating"></span>
-    <span id="genre"></span>
-    <span id="adult"></span>
+<header>
+    <a href="/">Accueil</a>
+    <a href="#" onclick="javascript:history.back();">Retour</a>
+</header>
 
-    <p id="overview"></p>
+<div id="content">
+    <div class="fond">
+        <h2></h2>
+        <span id="year"></span>
+        <span id="rating"></span>
+        <span id="genre"></span>
+        <span id="adult"></span>
+
+        <p id="overview"></p>
+    </div>
     <img id="jaquette" src="" alt="jaquette"/>
 
     <div id="commands">
