--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -5,8 +5,30 @@ html {
   body {
     width: 100%;
     height: 100%;
+    background-color: #000000;
+
+    header {
+      height: 50px;
+      background-color: #550000;
+      position: fixed;
+      z-index: 1000;
+      right: 0;
+      left: 0;
+      top: 0;
+
+      a {
+        padding: 9px 20px;
+        margin: 5px 0 0 10px;
+        border-radius: 7px;
+        color: #FFFFFF;
+        background-color: #cfd8dc;
+        display: inline-block;
+        font-size: 17px;
+      }
+    }
 
     #content {
+      margin-top: 50px;
       width: 100%;
       height: 100%;
 
@@ -47,29 +69,79 @@ html {
         padding: 14px;
         font-size: 20px;
 
-        h2 {
-          font-size: 28px;
-          display: inline;
-        }
+        .fond {
+          background-color: rgba(255, 255, 255, 0.5);
+          width: 620px;
+          padding: 10px;
+          max-height: 430px;
+          overflow: hidden;
 
-        #year {
-          margin-left: 10px;
-          font-size: 24px;
-        }
+          h2 {
+            font-size: 28px;
+            display: inline;
+          }
 
-        #genre {
-          font-size: 13px;
-        }
+          #year {
+            margin-left: 10px;
+            font-size: 24px;
+          }
 
-        #overview {
-          width: 600px;
+          #genre {
+            font-size: 13px;
+          }
+
+          #overview {
+            width: 600px;
+            text-align: justify;
+          }
         }
 
         #jaquette {
           width: 300px;
           position: absolute;
-          top: 30px;
+          top: 65px;
           right: 30px;
+          opacity: 0.8;
+        }
+      }
+    }
+
+    &.list-movies {
+      color: #FFFFFF;
+
+      #content {
+        padding: 10px;
+
+        .movie-vertical {
+          display: inline-block;
+          width: 24%;
+          vertical-align: top;
+          margin: 5px 9px 0 0;
+
+          .title {
+            height: 55px;
+            overflow: hidden;
+
+            h2 {
+              font-size: 24px;
+              margin: 0;
+              padding: 0;
+              display: inline;
+            }
+
+            span {
+
+            }
+          }
+
+          img {
+            width: 230px;
+            height: 346px;
+          }
+
+          a {
+            color: #FFFFFF;
+          }
         }
       }
     }
