--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -31,7 +31,7 @@
     <div id="commands">
         <ul>
             <li>Lecture</li>
-            <li>Voir la Bande Annonce</li>
+            <li><a href="/movie/<%= id %>/bande-annonce">Voir la Bande Annonce</a></li>
         </ul>
     </div>
 </div>
