--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,8 @@ html body.list-movies #content .movie-vertical {
     display: inline-block;
     width: 24%;
     vertical-align: top;
-    margin: 5px 9px 0 0;
+    margin: 5px 7px 0 0;
+    position: relative;
 }
 
 html body.list-movies #content .movie-vertical .title {
@@ -131,9 +132,27 @@ html body.list-movies #content .movie-vertical .title h2 {
     display: inline;
 }
 
+html body.list-movies #content .movie-vertical .info {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: 5px;
+    padding: 0 5px;
+}
+
+html body.list-movies #content .movie-vertical .info::before {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(150, 0, 0, 0.5);
+}
+
 html body.list-movies #content .movie-vertical img {
-    width: 230px;
-    height: 346px;
+    width: 187px;
+    height: 281px;
 }
 
 html body.list-movies #content .movie-vertical a {
