--- a/views/list-movies.ejs
+++ b/views/list-movies.ejs
@@ -13,6 +13,7 @@
 
 <header>
     <a href="/">Accueil</a>
+    <a href="#" class="sort-releasedate">Trier par date</a>
 </header>
 
 <div id="content">
@@ -34,21 +35,44 @@
     console.time('ready');
 
     // Listen for the talk event.
-    io.on('ready', function (data) {
+    io.on('ready', function () {
         console.timeEnd('ready');
     });
 
+    // List of movies
     io.on('client-list-movies-local', function (data) {
         if (data) {
+            //console.log(data);
             $('#list-movies').append(
-                    '<div class="movie movie-vertical">' +
+                    '<div class="movie movie-vertical" movie="' + data.imdbID + '" releaseDate="' + (typeof(data.releaseDate) !== 'undefined' ? data.releaseDate : data.year + '-99-99') + '">' +
                     '<a href="/movie/' + data._id + '/details" filePath="' + data.filePath + '">' +
-                    '<div class="title"><h2>' + data.title + '</h2> <span class="year">(' + data.year + ')</span></div>' +
+                    '<div class="title"><h2>' + data.title + '</h2></div>' +
+                    '<div class="info"><span class="year">' + data.year + '</span></div>' +
                     '<img src="' + data.posterURL + '" />' +
                     '</a>' +
                     '</div>'
             );
         }
+    });
+
+    // Sort
+    $('.sort-releasedate').on('click', function () {
+        var movies = $('.movie');
+        $('#list-movies').html('');
+        var sort = $(movies).sort(function (a, b) {
+            if ($(a).attr('releaseDate') !== 'undefined' && $(b).attr('releaseDate') !== 'undefined') {
+                if ($(a).attr('releaseDate') > $(b).attr('releaseDate')) {
+                    return false;
+                } else {
+                    return true;
+                }
+            }
+            return false;
+
+        });
+        $.each(sort, function (key, value) {
+            $('#list-movies').append($(value));
+        });
     });
 </script>
 
