--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,7 +7,7 @@ html {
     height: 100%;
     background-color: #000000;
 
-    header {
+    /*header {
       height: 50px;
       background-color: #550000;
       position: fixed;
@@ -30,36 +30,6 @@ html {
     #content {
       width: 100%;
       height: 100%;
-
-      .top {
-        width: 100%;
-        height: 50%;
-
-      }
-
-      .bottom {
-        width: 100%;
-        height: 50%;
-
-        .section {
-          width: 32%;
-          height: 100%;
-          /*position:absolute;*/
-          display: table;
-          float: left;
-          margin-left: 2%;
-          &:first-child {
-            margin-left: inherit;
-          }
-
-          a {
-            display: table-cell;
-            vertical-align: middle;
-            text-align: center;
-          }
-        }
-
-      }
     }
 
     &.movie-details {
@@ -158,6 +128,6 @@ html {
           }
         }
       }
-    }
+    }*/
   }
 }
