--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,91 +9,43 @@
 </head>
 <body>
 
-<div id="content">
-
-    <div class="top">
-        <div class="button">
-            <a href="/">
-
-            </a>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="/list-movies">Liste des films</a></li>
+                <li><a href="/search-movies">Rechercher un film</a></li>
+                <li><a href="/new-movies">Nouveautés</a></li>
+            </ul>
         </div>
+    </nav>
+</div>
 
-        <div id="informations" class="">
-            <div class="error-localisation"></div>
-        </div>
-    </div>
+<div class="had-container">
+    <div class="row">
+        <div class="col s6">
 
-    <div class="bottom">
-        <div class="section">
-            <a href="/list-movies" class="waves-effect waves-light btn-large btn-3 indigo">
-                <span>Liste des films</span>
-            </a>
-        </div>
-        <div class="section">
-            <a href="/search-movies" class="waves-effect waves-light btn-large btn-3">
-                <span>Chercher un film</span>
-            </a>
-        </div>
-        <div class="section">
-            <a href="/new-movies" class="waves-effect waves-light btn-large btn-3 blue-grey">
-                <span>Nouveautés</span>
-            </a>
         </div>
     </div>
-
+    <div class="row">
+        <a href="/list-movies" class="col s4 valign-wrapper waves-effect waves-light btn-large btn-3 indigo valign">
+            <span class="valign">Liste des films</span>
+        </a>
+        <a href="/search-movies" class="col s4 valign-wrapper waves-effect waves-light btn-large btn-3 valign">
+            <span class="valign">Chercher un film</span>
+        </a>
+        <a href="/new-movies" class="col s4 valign-wrapper waves-effect waves-light btn-large btn-3 blue-grey valign">
+            <span class="valign">Nouveautés</span>
+        </a>
+    </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script>
-    //Todo: Mettre ça dans un fichier externe
+<script src="/js/jquery/jquery.min.js"></script>
+<script src="/js/materialize/bin/materialize.min.js"></script>
+<script src="/js/custom/index.js"></script>
 
-    var socket = io.connect('http://localhost:3000');
-    socket.on('ready', function () {
-        // Envoi au Master son identification
-        socket.emit('client');
-
-        // Test
-        socket.emit('play', {timeStart: 0, path: 'test', name: 'test.avi'});
-    });
-
-    // Check
-    socket.on('check', function () {
-        console.log('Check');
-        socket.emit('check-client');
-    });
-</script>
-
-<script>
-    //Todo: Mettre ça dans un fichier externe
-
-    /* Localisation */
-    var errorLocalisation = document.getElementById("error-localisation");
-
-    function getLocation() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function (position) {
-                socket.emit('position', position.coords)
-            }, showError);
-        } else {
-            x.innerHTML = "Geolocation is not supported by this browser.";
-        }
-    }
-    function showError(error) {
-        switch (error.code) {
-            case error.PERMISSION_DENIED:
-                x.innerHTML = "User denied the request for Geolocation."
-                break;
-            case error.POSITION_UNAVAILABLE:
-                x.innerHTML = "Location information is unavailable."
-                break;
-            case error.TIMEOUT:
-                x.innerHTML = "The request to get user location timed out."
-                break;
-            case error.UNKNOWN_ERROR:
-                x.innerHTML = "An unknown error occurred."
-                break;
-        }
-    }
-</script>
 </body>
 </html>
