--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -11,10 +11,7 @@
 </head>
 <body id="<%= id %>" class="movie-details">
 
-<header>
-    <a href="/">Accueil</a>
-    <a href="#" onclick="javascript:history.back();">Retour</a>
-</header>
+<% include partials/menu.ejs %>
 
 <div id="content">
     <div class="fond">
