--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,36 +9,27 @@
 </head>
 <body>
 
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="/list-movies">Liste des films</a></li>
-                <li><a href="/search-movies">Rechercher un film</a></li>
-                <li><a href="/new-movies">Nouveautés</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<% include partials/menu.ejs %>
 
 <div class="had-container">
     <div class="row">
         <div class="col s6">
 
         </div>
+        <div class="col s6">
+
+        </div>
     </div>
     <div class="row">
-        <a href="/list-movies" class="col s4 valign-wrapper waves-effect waves-light btn-large btn-3 indigo valign">
-            <span class="valign">Liste des films</span>
-        </a>
-        <a href="/search-movies" class="col s4 valign-wrapper waves-effect waves-light btn-large btn-3 valign">
-            <span class="valign">Chercher un film</span>
-        </a>
-        <a href="/new-movies" class="col s4 valign-wrapper waves-effect waves-light btn-large btn-3 blue-grey valign">
-            <span class="valign">Nouveautés</span>
-        </a>
+        <div class="col s4">
+
+        </div>
+        <div class="col s4">
+
+        </div>
+        <div class="col s4">
+
+        </div>
     </div>
 </div>
 
