--- a/views/list-movies.ejs
+++ b/views/list-movies.ejs
@@ -11,18 +11,7 @@
 </head>
 <body class="list-movies">
 
-<div class="navbar-fixed">
-    <nav class="red darken-4">
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"></a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="/about">A propos</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<% include partials/menu.ejs %>
 
 <div id="content">
     <div id="list-movies"></div>
