Update partials views for menu

--- a/views/details-movie.ejs
+++ b/views/details-movie.ejs
@@ -11,7 +11,13 @@
 </head>
 <body id="<%= id %>" class="movie-details">
 
-<% include partials/menu.ejs %>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <% include partials/menu.ejs %>
+        </div>
+    </nav>
+</div>
 
 <div id="content">
     <div class="fond">
