--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,7 +1,4 @@
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons mdi-navigation-menu"></i></a>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="/">Accueil</a></li>
                 <li><a href="/list-movies">Liste des films</a></li>
@@ -9,6 +6,3 @@
                 <li><a href="/new-movies">Nouveautés</a></li>
                 <li><a href="/about"></a></li>
             </ul>
-        </div>
-    </nav>
-</div>
