--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,18 @@
 
     <link rel="stylesheet" href="/css/materialize.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 
-<% include partials/menu.ejs %>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <% include partials/menu.ejs %>
+        </div>
+    </nav>
+</div>
 
 <div class="had-container">
     <div class="row">
