--- a/views/search-movies.ejs
+++ b/views/search-movies.ejs
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-<% include partials/menu.ejs %>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <% include partials/menu.ejs %>
+        </div>
+    </nav>
+</div>
 
 </body>
 </html>
